--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DOCKER_PROJECT_NAME=tgfuqabul_new
-DOCKER_NGINX_PORT=8111
+DOCKER_PROJECT_NAME=sarbon_qabul_new1
+DOCKER_NGINX_PORT=8811
 DOCKER_DATABASE_PORT=3610
-DATABASE_PASSWORD=mktgfuQabu11
-TELEGRAM_CHAT_ID=813225336
-TELEGRAM_BOT_TOKEN=7763858780:AAEu_r9J6eIKFAgE2qhlgIJJi5WieKdw1BE
+DATABASE_PASSWORD=mksarbon_qabul_new11
+TELEGRAM_BOT_TOKEN="7763858780:AAEu_r9J6eIKFAgE2qhlgIJJi5WieKdw1BE"
+TELEGRAM_CHAT_ID="813225336"
